@@ -2,6 +2,8 @@ v0.12.0
 * Subscription to update the substitution list periodically from an URL.
 * Ability to use backslash-escaped characters in input (text and whole words) and output. Supported
   characters are \\ (backslash), \n (new line), \r (carriage return) and \t (tab).
+* New list format 0.12 with the new interpretation of the backslash-escaped characters.
+* Removed compatibility with the substitution list in the 0.8 format. 
 * Removed compatibility with Firefox 1.5 and 2.
 * Compatibility with Firefox 3.5.
 * String changes:
